--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "tsc -w & nodemon dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
